--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <meta name="google-site-verification" content="SMo9Uo-qRink6-xfCJg7stzuJPI6tK85ih5TomRz1jA" />
     <title>Rainbow Token</title>
   </head>
   <body>
